fix: categoria novidades nao existe mais, agora e melhores precos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="barraTipos">
             <div class="tipo">
                 <img class="icone" src="icones/icone-1.jpg">
-                <p>Novidades</p>
+                <p>Melhores preços!</p>
             </div>
 
             <div class="tipo">
