feat: adicionando na pagina principal as novidades

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="tipo">
                 <img class="icone" src="icones/icone-2.jpg">
-                <p>Aventura</p>
+                <p>Novidades</p>
             </div>
 
             <div class="tipo">
