fix: versão inicial sem mudanças

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <html>
     <head>
         <link type="text/css" href="index.css" rel="stylesheet">
@@ -20,111 +23,130 @@
         <div class="barraTipos">
             <div class="tipo">
                 <img class="icone" src="icones/icone-1.jpg">
-                <p>Melhores preços!</p>
+                <p>Novidades</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-2.jpg">
                 <p>Novidades</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-3.jpg">
                 <p>Em Alta</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-4.jpg">
                 <p>Espaços Adaptados</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-5.jpg">
                 <p>Diversão</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-6.jpg">
                 <p>Hanoks</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-7.jpg">
                 <p>Quartos Privativos</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-8.jpg">
                 <p>Em frente à praia</p>
             </div>
-
             <div class="tipo">
                 <img class="icone" src="icones/icone-9.jpg">
-                <p>No Interior</p>
+                <p>No interior</p>
             </div>
         </div>
 
         <div class="lugares">
-            <div class="lugar">
+            <div class="grupoLugar">
                 <img class="imagem" src="lugares/lugar1.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
-
-            <div class="lugar">
+            <div class="grupoLugar">
                 <img class="imagem" src="lugares/lugar2.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
-
-            <div class="lugar">
+            <div class="grupoLugar">
                 <img class="imagem" src="lugares/lugar3.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
-
-            <div class="lugar">
+            <div class="grupoLugar">
                 <img class="imagem" src="lugares/lugar4.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
+        </div>
 
-            <div class="lugar">
-                <img class="imagem" src="lugares/lugar1.jpg">
+        <div class="lugares">
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar5.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
-
-            <div class="lugar">
-                <img class="imagem" src="lugares/lugar2.jpg">
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar6.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
-
-            <div class="lugar">
-                <img class="imagem" src="lugares/lugar3.jpg">
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar7.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
-
-            <div class="lugar">
-                <img class="imagem" src="lugares/lugar4.jpg">
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar8.jpg">
                 <div class="local">Tybee Island, Geórgia, USA</div>
-                <div class="tipo">Pista de Boliche</div>
+                <div class="tipo">Pista de boliche</div>
+                <div class="periodo">1-8 de Janeiro</div>
+                <div class="preco"><b>R$ 4.102</b> noite</div>
+            </div>
+        </div>
+
+        <div class="lugares">
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar9.jpg">
+                <div class="local">Tybee Island, Geórgia, USA</div>
+                <div class="tipo">Pista de boliche</div>
+                <div class="periodo">1-8 de Janeiro</div>
+                <div class="preco"><b>R$ 4.102</b> noite</div>
+            </div>
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar10.jpg">
+                <div class="local">Tybee Island, Geórgia, USA</div>
+                <div class="tipo">Pista de boliche</div>
+                <div class="periodo">1-8 de Janeiro</div>
+                <div class="preco"><b>R$ 4.102</b> noite</div>
+            </div>
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar11.jpg">
+                <div class="local">Tybee Island, Geórgia, USA</div>
+                <div class="tipo">Pista de boliche</div>
+                <div class="periodo">1-8 de Janeiro</div>
+                <div class="preco"><b>R$ 4.102</b> noite</div>
+            </div>
+            <div class="grupoLugar">
+                <img class="imagem" src="lugares/lugar12.jpg">
+                <div class="local">Tybee Island, Geórgia, USA</div>
+                <div class="tipo">Pista de boliche</div>
                 <div class="periodo">1-8 de Janeiro</div>
                 <div class="preco"><b>R$ 4.102</b> noite</div>
             </div>
